# hospitality-platform

./: .gitignore  docker-compose.yml
backend/: Dockerfile  alembic.ini  check_api.py  hospitality.db  openapi_dump.json  pyproject.toml  pyright_log.txt  pyright_output.txt  pyrightconfig.json  railway.toml  requirements.txt  test.db  test_api.py  verify_xs.py
backend/alembic/: env.py
backend/alembic/versions/: d02d1493fa22_initial_schema.py
backend/app/: main.py
backend/app/ai/: engine.py  kitchen.py
backend/app/api/: unity.py  xs_features.py
backend/app/core/: config.py  unity_os.py
backend/app/db/: models.py  session.py  xs_models.py
backend/app/integrations/: logic.py  models.py  router.py  toast_client.py
backend/scripts/: add_guests.py  run_sim.py  simulation.py  verify_unity.py
backend/tests/: test_unity_phase1.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/agents/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/host/: page.tsx
frontend/src/app/kds/: page.tsx
frontend/src/app/tablet/: page.tsx
frontend/src/app/unity/: page.tsx
frontend/src/app/xs/: page.tsx
frontend/src/components/agents/: AgentManager.tsx
frontend/src/components/dashboard/: FloorPlanView.tsx  KitchenQueue.tsx  RevenueChart.tsx  Sidebar.tsx
frontend/src/components/nightclub/: BottleMenu.tsx  FloorMap.tsx  StaffManager.tsx
frontend/src/components/tablet/: GuestProfileCard.tsx
frontend/src/context/: RestaurantContext.tsx
frontend/src/lib/: api.ts
(+13 files in other folders)
